--- a/rules.html
+++ b/rules.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>Chill Group - Rules</title>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<style>
 			@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 			body { font-family: 'Open Sans', sans-serif; background-color: #000; }
